Updated website to include new nav bar and banner

--- a/index.html
+++ b/index.html
@@ -5,27 +5,62 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Charlotte Weager</title>
     <link rel = "stylesheet" href = "style.css">
-    <link rel= "stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css">
+    <link rel= "stylesheet" href = "https://use.fontawesome.com/releases/v5.6.3/css/all.css">
   </head>
   <body>
-    <div class = "container">
-      <div class = "card-blue text-center shadowed">
+    <nav>
+      <div class = "nav-container">
+        <div class="left-nav inline-block text-left"><i class="fas fa-code-branch med-pic"></i><h3 class="inline-block">#levelup</h3></div>
+        <div class="right-nav inline-block text-left"><i class="fas fa-ellipsis-h med-pic"></i></h3></div>
+      </div>
+    </nav>
+    <div class ="banner">
+      <div class = "banner-container text-center">
+        <h1><i class="fas fa-terminal"></i>HELLO WORLD<br>
+          journey to development...<br>
+          and beyond!<br>
+          <i class="fas fa-laptop-code big-pic"></i><i class="fas fa-bug big-pic"></i><i class="fab fa-connectdevelop big-pic"></i>
+        </h1>
+      </div>
+    </div>
+    <div class = "container text-center">
+      <div class = "card-blue text-center shadowed"> 
         <h1>Hello, I'm Charlotte ✌</h1>
+        <img class = "profile-avi img-circle blue-border shadowed inline-block" src = "images/F9EBFBBF-6F5A-457D-9EEE-A9E252944D87.jpeg" alt = "charlotte pic">
+        <ul class = "inline-block text-left">
+          <li><strong>Level 1. Developer</strong></li>
+          <hr class="small-hr">
+          <li>Ruby ⭐⭐⭐</li>
+          <li>SQL  &nbsp;&nbsp;⭐⭐⭐</li> 
+          <li>HTML ⭐⭐</li> 
+          <li>CSS  &nbsp;&nbsp;&nbsp;⭐⭐</li> 
+        </ul>
+        
         <h2>~ upcoming web developer ~ </h2>
-        <img class = "profile-avi img-circle blue-border shadowed" src = "images/F9EBFBBF-6F5A-457D-9EEE-A9E252944D87.jpeg" alt = "charlotte pic">
-        <p>Join me on my quest to become a front-end and back-end master!✨<br><br>
+      
+        <hr class = "big-hr">
+        <p>
           During the day, I masquerade as a deployment manager in an audit firm, helping teams solve their technology problems 🐱‍🏍<br><br>
-          I also love to write and game in my spare time, with a love of fantasy and scifi 😍
+          During the night, I learn to harness the power of code through Le wagon as I train to become a web developer 😎<br><br>
+          Join me on my quest to become a front-end and back-end master!✨
         </p>
       </div>
+      <i class="fas fa-code med-pic"></i>
+      <div class = "card-blue text-center shadowed">
+        <h2> ~ my journey ~</h2>
+        <p><i class="fas fa-university big-pic"></i><br> Studied Psychology at York University<br><br>
+        <p><i class="fas fa-calculator big-pic"></i> <br>Trained to be a qualified accountant <br><br>
+        <p><i class="fas fa-laptop big-pic"></i><br> Joined the Deployment and Adoption team at Deloitte<br><br>
+        <p><i class="fas fa-laptop-code big-pic"></i><br> Now retraining to become a web developer! 💪</p>
+      </div>
+      <i class="fas fa-code med-pic"></i>
       <div class = "card-blue text-center shadowed">
         <button class = "btn-blue transition-delay shadowed">MORE INFO</button>
         <ul>
-          <li><a href = "#" class = "shadowed transition-delay" target = "_blank"><i class="fab fa-github-square"></i></a></li>
-          <li><a href = "#" class = "shadowed transition-delay" target = "_blank"><i class="fab fa-facebook-square"></i></a></li>
-          <li><a href = "#" class = "shadowed transition-delay" target = "_blank"><i class="fab fa-linkedin"></i></a></li>
+          <li class = "inline-block"><a href = "#" class = "shadowed transition-delay" target = "_blank"><i class="fab fa-github-square"></i></a></li>
+          <li class = "inline-block"><a href = "#" class = "shadowed transition-delay" target = "_blank"><i class="fab fa-facebook-square"></i></a></li>
+          <li class = "inline-block"><a href = "#" class = "shadowed transition-delay" target = "_blank"><i class="fab fa-linkedin"></i></a></li>
         </ul>
       </div>
-    </div>
   </body>
 </html>
